--- a/trunk/README
+++ b/trunk/README
@@ -19,7 +19,7 @@ echomail.
      Documentation
      -------------
      The doc and samples subdirectories contain documentation. You may also
-subscribe to RU.FTRACK Fidonet echo area and visit project's web page
+subscribe to RU.FTRACK Fidonet echo area (in Russian) and visit project's web page
 http://sourceforge.net/projects/ftrack-as.
 
      Bug reporting
