--- a/branches/trunk_2.0.0/doc/rntrack.1
+++ b/branches/trunk_2.0.0/doc/rntrack.1
@@ -1,4 +1,4 @@
-.TH RNTRACK 1 "13 January 2005"
+.TH "RNTRACK" "1" "2020-01-30" "RNtrack"
 .SH NAME
 RNtrack \- mail tracker and packer for FTN-networks
 .SH SYNOPSIS
@@ -13,29 +13,43 @@ corresponding operation with this message.
 .SH OPTIONS
 .TP
 .B \-c configfile
-Use an alternative config file. Space between -c and the beginning of the path is
-obligatory. Quotation marks are necessary. This parameter overrides 
-.B RNTRACKCONFIG
-environment variable.
+The configuration file name.
+For example,
+\f[I]-c\ \[dq]d:\[rs]soft\[rs]fido\[rs]RNtrack.cfg\[dq]\f[R].
+The space between the \[aq]\f[I]-c\f[R]\[aq] and the beginning of the
+path is required.
+Quotes are required.
+This parameter overrides \f[B]RNTRACKCONFIG\f[R] environment variable.
 .TP
 .B \-u
 Unpack outbound. Shows that outbound repack is necessary.
 Before execution of all main functions, described in configuration
-file, RNtrack will repack all outbound to a directory, defined by
-TempMail: keyword.
+file, RNtrack will unpack the entire outbound into the directory
+specified in the \f[I]\[aq]TempMail:\[aq]\f[R] statement.
 .TP
 .B \-t
-Do ScanDir: with expired time of execution (instructions for which single
-execution is shown, without respect of whether or not they should be executed
-right now).
+Run all \[aq]\f[I]\f[R]ScanDir:\f[I]\f[R]\[aq] statements, for which
+one-shot execution is indicated, regardless of whether they should be
+executed right now or not.
+.TP
+.B \-v
+Display the version of the program and the list of authors.
 .TP
 .B \-h, \-?
 Display help screen.
 .SH ENVIRONMENT
 .TP
 .B RNTRACKCONFIG
-Use alternative config file.
+If you run RNtrack without parameters, then in Windows it will try to
+read the %USERPROFILE%\[rs]fido\[rs]rntrack.cfg as a configuration file,
+in an UNIX-like operating system it will try to read
+\[ti]/fido/etc/rntrack.conf, and in other operating systems it will try
+to find rntrack.cfg file in the current directory and process it.
+.PP
+.IP "" 7
+You may set the \f[B]RNTRACKCONFIG\f[R] environment variable
+to choose a different path to RNtrack configuration file.
 .SH SUPPORTED PLATFORMS
-Linux, FreeBSD, OpenBSD, NetBSD, Solaris, MacOS X, AIX, OS/2, DOS and Win32.
+Linux, FreeBSD, OpenBSD, NetBSD, Solaris, MacOS X, AIX, OS/2, DOS and Windows.
 .SH AUTHOR
 Alex Soukhotine and others
