--- a/smapi/HISTORY
+++ b/smapi/HISTORY
@@ -1,3 +1,14 @@
+SMAPI 2.5 current
+Changes after smapi 2.4
+
+1. MAJOR feature improvements:
+   - Fetch orig address from MSGID if it is not presend in header (JAM)
+
+2. IMPORTANT bugfixes:
+   - remove unused function MsgBrowseArea()
+   - use 32-bit types instead platform-depended "long"
+
+
 SMAPI 2.4
 Changes after smapi 2.2
 
@@ -12,4 +23,4 @@ Changes after smapi 2.2
    - fixes for reading corrupted jam areas.
 
 
-$Id: HISTORY,v 1.1.1.1 2005/01/14 19:21:57 ph0enix Exp $
+$Id$
