--- a/ChangeLog
+++ b/ChangeLog
@@ -17,7 +17,9 @@
 # update Russian manual
 # make a new translation of the amended manual from Russian into English
 # add manual in the form of man-pages and plain text in English
-# change default path of configuration file
+# change default path of configuration file: "~/fido/etc/rntrack.cfg" under
+  a UNIX-like OS, "%USERPROFILE%\fido\rntrack.cfg" under Windows or 
+  "rntrack.cfg" under other OS
 # change the log date format to ISO 8601
 
 1.41 2019-09-29 (Subversion rev.191)
