--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,10 @@
 ! - Bug fixed
 # - Added feature or changes
 
+2.1.2 2020-04-22 (Subversion rev.326, tag "version-2.1.2")
+----------------------------------------------------------
+# update the manual according to changes made in v.2.1.0
+
 2.1.0 2020-04-22 (Subversion rev.323, tag "version-2.1.0")
 ----------------------------------------------------------
 # do not pack messages when at least one of Locked, Sent,
